fix name spacing issue

--- a/modules/df/df_tools/df_tools_slideshow/css/df_tools_slideshow.css
+++ b/modules/df/df_tools/df_tools_slideshow/css/df_tools_slideshow.css
@@ -1,4 +1,5 @@
-.df-tools-slideeshow .slick-slide {
+/* Cant namespace this because df-tools-slideshow comes after this class. This class is critical for containing absolute items to a single slide*/
+.slick-slide {
 	position: relative;
 }
 
